--- a/Accessory_figs_20160218.Rmd
+++ b/Accessory_figs_20160218.Rmd
@@ -19,67 +19,14 @@ sma_abline(mod)
 
 write.csv(PartsSummary, file="figs2/Accessory_Costs/PartsSummary.csv",row.names=FALSE)
 
-#seed count, scaled to plant size, decreases 1:1 with seed size, while bud count decreases less steeply; indication that seed count is what is actually "programmed in"
+means, counts to include in manuscript
 ```{r}
-
-win.metafile("figs2/Accessory_Costs/Figure_cost_of_flowers_vs_seed_size.wmf", height=5, width=15)
-plot
-
-par(mfrow=c(1,3), cex=1, omi=c(.1,.1,.1,.05), mai=c(1,1,.1,.05))
-options(scipen = 4)
-
-#put together, big-seeded plants produce lots more buds than predicted from 1:1 relationship, but the "correct" number of seeds
-plot(scaled_seed_count~seed_size,SummaryInd,pch=16,log="xy",col=col.spp(species),xlim=c(.01,1000),ylim=c(1e-6,10),yaxt="n",xaxt="n",xlab="seed size (mg)",ylab="count, scaled to plant size")
-points(scaled_bud_count~seed_size,SummaryInd,pch=21,col=col.spp(species))
-#points(scaled_failure_count~seed_size,SummaryInd,pch=2,col=col.spp(species))
-axis(2, at=c(0.000001,0.0001,0.01,1), labels=c(0.000001,0.0001,0.01,1),cex.axis=0.9)
-axis(1, at=c(0.01,1,100), labels=c(0.01,1,100),cex.axis=0.9)
-
-mod1 <- sma(scaled_seed_count~seed_size,data=subset(SummaryInd,scaled_seed_count!=0),log="xy",slope=-1,method="OLS")
-mod2 <- sma(scaled_bud_count~seed_size,data=subset(SummaryInd,scaled_bud_count!=0),log="xy",slope=-1,method="OLS")
-mod3 <- sma(scaled_failure_count~seed_size,data=subset(SummaryInd,scaled_failure_count!=0),log="xy",slope=-1,method="OLS")
-sma_abline(mod1)
-abline(mod2$coef[[1]][1,1],mod2$coef[[1]][2,1],col="blue")
-abline(mod3$coef[[1]][1,1],mod3$coef[[1]][2,1],col="red")
-legend("topright",legend=c("seed count","total bud count","failed flower count"),col=c("black","blue","red"),pch=c(16,21,8),bty="n")
-
-
-plot(seedset~seed_size,SummarySpp[["mean"]],log="xy",col=col.spp(species),pch=16, xlim=c(.01,1000),ylim=c(.01,.3),cex=1.5,xaxt="n",xlab="seed size (mg)",ylab="seed set")
-mod <- lm(log10(seedset)~log10(seed_size),SummarySpp[["mean"]])
-abline(mod$coeff[1],mod$coeff[2])
-text(10^((0.99*(par("usr")[2]-par("usr")[1]))+par("usr")[1]),10^((0.98*(par("usr")[4]-par("usr")[3]))+par("usr")[3]),
-     paste("r2 = ",round(glance(mod)[1],2)),adj=1)
-y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$seedset,SummarySpp[["se"]]$seedset)
-axis(1, at=c(0.01,1,100), labels=c(0.01,1,100),cex.axis=0.9)
-legend("bottomleft",legend=labels.spp(),col=col.spp(),pch=16, cex=.9,bty="n")
-
-
-#species that abort a disprortionate # of buds can do so because the relative cost of buds (relative to seeds, dispersal) is small
-plot(prop_prepollencosts~seedset,SummarySpp[["mean"]],pch=16,log="x",col=col.spp(species),ylim=c(-.2,1),xlim=c(.01,.3),cex=1.5,yaxt="n",ylab="pre-pollination costs (proportion of total seed costs)",xlab="seed set")
-mod <- sma(prop_prepollencosts~seedset,data=subset(SummarySpp[["mean"]]),log="x",slope=1,method="OLS")
-y.error.bars(SummarySpp[["mean"]]$seedset,SummarySpp[["mean"]]$prop_prepollencosts,SummarySpp[["se"]]$prop_prepollencosts)
-sma_abline(mod)
-sma_sum(mod)
-text(10^((0.99*(par("usr")[2]-par("usr")[1]))+par("usr")[1]),((0.98*(par("usr")[4]-par("usr")[3]))+par("usr")[3]),
-     paste("r2 = ",round(sma_sum(mod)[1],2)),adj=1)
-axis(2, at=c(-0.2,0,.2,.4,.6,.8,1), labels=c("",0.0,0.2,0.4,0.6,0.8,""),cex.axis=1)
-
-dev.off()
+count(SummaryInd)
+count(subset(SummaryInd,seed_count>0))
+count(subset(SummaryInd,repro_inv>0))
+mean(subset(SummaryInd$prop_failure,SummaryInd$prop_failure>0))
+mean(subset(SummaryInd$prop_accessory,SummaryInd$seed_count>0))
 ```
-
-#Neither within nor across species, does the proportion of reproductive energy spent on "success" correlate with total reproductive investment
-```{r}
-par(mfrow=c(1,1), cex=1, omi=c(.1,.1,.1,.05), mai=c(.8,.8,.1,.05))
-
-xvar <- "repro_inv"
-yvar <- "prop_success"
-data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
-
-fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], log="x",method="OLS")
-results <- lines(fit$groupsummary)
-plot(fit,col=col.spp(fit$groupsummary$group),xlab="",ylab="",lty=results$linetype,pch=16,log="x")
-```
-
 
 #Table 1. correlations with total repro inv
 ```{r}
@@ -97,12 +44,12 @@ colnames(temp)[1]<- "variable"
 results <- bind_rows(results, temp)
 }
 
-write.csv(results, file="figs2/Accessory_Costs/Table02correlations_with_repro_inv.csv",row.names=FALSE)
+write.csv(results, file="figs2/Accessory_Costs/Table01_correlations_with_repro_inv.csv",row.names=FALSE)
 ```
 
-#Figure 1. Correlations of various reproductive investment categories against plant weight
+#Figure 2. Correlations of various reproductive investment categories against plant weight
 ```{r}
-win.metafile("figs2/Accessory_Costs/Figure01_correlations_with_plant_weight.wmf", height=5, width=10)
+win.metafile("figs2/Accessory_Costs/Figure02_correlations_with_plant_weight.wmf", height=5, width=10)
 plot
 
 par(mfrow=c(1,2), cex=1, omi=c(.1,.6,.1,.05), mai=c(.8,.1,.1,.05))
@@ -156,63 +103,94 @@ mtext(text="flower weight * bud count (mg)",side=1,line=2,outer=FALSE)
 dev.off()
 ```
 
-#correlations between repro inv and propagule inv by species
+#Table 3 showing accessory cost values for the species
 ```{r}
-yvar <- "repro_inv"
-xvar <- "propagule_inv"
-data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
+acc_costs_spp <- dplyr::select(SummarySpp[["mean"]],species,seed_size,accessory_per_seed,prop_accessory_nonzero,seedcosts,prop_success,
+                               prepollencosts,packaging_dispersal_per_seed,failure_per_seed,prop_failure,prepollen_failure_per_seed,postpollen_aborted_per_seed, seedset)
+acc_costs_spp$species <- labels.spp.full()
+acc_costs_spp <- format(acc_costs_spp, digit=2)
 
-fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
-results <- fit$groupsummary
-
-write.csv(results, file="figs2/Accessory_Costs/Table02extra_propagule_invest_vs_repro_inv.csv",row.names=FALSE)
+write.csv(acc_costs_spp, file="figs2/Accessory_Costs/Table03_AccCosts_by_Species.csv",row.names=FALSE)
 ```
 
-#when reproductive investment is scaled by leaf area there is no significant difference by seed size - so increase in repro inv with seed size simply because species with bigger seeds are bigger plants  
+#Figure 3. Ternary diagram showing seedcosts
 ```{r}
-plot(scaled_repro_inv~seed_size,SummaryInd, col=col.spp(species),pch=16,log="xy")
-points(scaled_repro_inv~seed_size,SummarySpp[["mean"]], cex=2, col=col.spp(species),pch=16,log="xy")
-mod <-sma(scaled_repro_inv~seed_size,SummarySpp[["mean"]],log="xy",method="OLS")
-summary(mod)
-```
+ternary <- select(SummarySpp[["mean"]],species,seed_size,prepollencosts,packaging_dispersal_per_seed)
+ternary$packaging_dispersal_per_seed[9] <- 0.1
 
-#Consider how accessory cost components shift in terms of costs per seed, and cost as fraction total reproductive investment
+ternary$seedcosts = ternary$seed_size + ternary$prepollencosts + ternary$packaging_dispersal_per_seed
+ternary$per_seed <-100*ternary$seed_size/ternary$seedcosts
+ternary$per_poll <-100*ternary$prepollencosts/ternary$seedcosts
 
+ternary$per_disp <-100*ternary$packaging_dispersal_per_seed/ternary$seedcosts
+mod_poll <- sma(per_poll~seedcosts,ternary,slope.test=0,method="OLS",log="x")
+mod_seed <- sma(per_seed~seedcosts,ternary,slope.test=0,method="OLS",log="x")
+mod_disp <- sma(per_disp~seedcosts,ternary,slope.test=0,method="OLS",log="x")
 
-```{r}
-par(mfrow=c(1,1), cex=1, omi=c(.1,.1,.1,.05), mai=c(.8,.8,.1,.1))
+costs_per_seed <- as.data.frame("costs for seed (%)")
+costs_per_seed <- cbind(costs_per_seed,select(mod_seed$groupsummary,r2,pval,Int,Slope,Slope_lowCI,Slope_highCI,Slope_test,Slope_test_p))
+names(costs_per_seed) <- c("investment category (mg)","r squared","p value","intercept","slope","slope_lowCI","slope_highCI","slope test","slope test p")
 
-plot(repro_inv~seed_size,SummarySpp[["mean"]],log="xy",col=col.spp(species),pch=16)
-mod <- lm(log10(repro_inv)~log10(seed_size),SummarySpp[["mean"]])
-abline(mod$coeff[1],mod$coeff[2])
-words.top.left.logxy(mod)
-y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$repro_inv,SummarySpp[["se"]]$repro_inv)
+costs_per_seed2 <- as.data.frame("costs for pre-pollination (%)")
+costs_per_seed2 <- cbind(costs_per_seed2,select(mod_poll$groupsummary,r2,pval,Int,Slope,Slope_lowCI,Slope_highCI,Slope_test,Slope_test_p))
+names(costs_per_seed2) <- c("investment category (mg)","r squared","p value","intercept","slope","slope_lowCI","slope_highCI","slope test","slope test p")
+costs_per_seed <- rbind(costs_per_seed,costs_per_seed2)
 
-win.metafile("figs2/Accessory_Costs/Figure02_seedsize_vs_reproinv.wmf", height=5, width=5)
+costs_per_seed2 <- as.data.frame("costs for dispersal (%)")
+costs_per_seed2 <- cbind(costs_per_seed2,select(mod_disp$groupsummary,r2,pval,Int,Slope,Slope_lowCI,Slope_highCI,Slope_test,Slope_test_p))
+names(costs_per_seed2) <- c("investment category (mg)","r squared","p value","intercept","slope","slope_lowCI","slope_highCI","slope test","slope test p")
+costs_per_seed <- rbind(costs_per_seed,costs_per_seed2)
+
+write.csv(costs_per_seed, file="figs2/Accessory_Costs/Table00_in_text_costs_per_seed.csv",row.names=FALSE)
+
+win.metafile("figs2/Accessory_Costs/FigureXX_seedcost_components.wmf", height=6, width=6)
 plot
 
-par(mfrow=c(1,1), cex=1, omi=c(.1,.1,.1,.05), mai=c(.8,.8,.1,.1))
-plot(seedset~seed_size,SummarySpp[["mean"]],log="xy",col=col.spp(species),pch=16)
-mod <- lm(log10(seedset)~log10(seed_size),SummarySpp[["mean"]])
-abline(mod$coeff[1],mod$coeff[2])
-words.bottom.left.logxy(mod)
-y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$seedset,SummarySpp[["se"]]$seedset)
+plot(per_seed~seedcosts,ternary,col="black",log="x",pch=21,cex=2,ylim=c(0,75),ylab="prop of seedcosts")
+points(per_poll~seedcosts,ternary,col="red",pch=16,cex=2)
+points(per_disp~seedcosts,ternary,col="blue",pch=16,cex=2)
+
+abline(mod_poll$groupsummary["Int"][[1]],mod_poll$groupsummary["Slope"][[1]],col="red",lwd=2)
+abline(mod_seed$groupsummary["Int"][[1]],mod_seed$groupsummary["Slope"][[1]],col="black",lty=2,lwd=2)
+abline(mod_disp$groupsummary["Int"][[1]],mod_disp$groupsummary["Slope"][[1]],col="blue",lwd=2)
+legend("topleft",legend=c("seed","prepollen","pack&disp"),col=c("black","red","blue"),pch=16, cex=1.1,bty="n")
+dev.off()
+```
+
+```{r}
+win.metafile("figs2/Accessory_Costs/Figure03_ternary_diagram_seedcosts.wmf", height=5, width=5)
+plot
+
+par(mfrow=c(1,1), cex=1, omi=c(1,1,1,1), mai=c(.1,.1,.1,.1)) 
+
+ggtern(data=ternary,aes(y=per_seed,x=per_poll,z=per_disp)) +
+  labs(y = "seed",
+       x = "pre-poll",
+       z = "pack&disp",
+       Tarrow = "seed weight (%)",
+       Larrow = "pre-pollination costs (%)",
+       Rarrow = "packaging & dispersal costs (%)",
+       title = "Seed cost components",
+       size = 3) +
+  geom_point(size=sqrt(ternary$seedcosts/2),shape=20,color=col.spp()) +
+   theme_bw() + 
+  theme_showarrows() +
+  geom_text(label=ternary$species, color="black", hjust=-.3, vjust=sqrt(ternary$seedcosts/500),size=2)
 
 dev.off()
 ```
 
-#Table showing accessory cost values for the species
+#Table 4 showing seedcost breakdown into components, by species
 ```{r}
-acc_costs_spp <- dplyr::select(SummarySpp[["mean"]],species,seed_size,seedset,accessory_per_seed,prepollencosts,prepollen_all_per_seed,prepollen_failure_per_seed,postpollen_aborted_per_seed,packaging_dispersal_per_seed,prop_accessory_nonzero)
-acc_costs_spp$species <- labels.spp.full()
-acc_costs_spp <- format(acc_costs_spp, digit=2)
-
-write.csv(acc_costs_spp, file="figs2/Accessory_Costs/Table02_AccCosts_by_Species.csv",row.names=FALSE)
+prop_seedcosts_spp <- dplyr::select(SummarySpp[["mean"]],species,seedcosts,prop_prepollencosts,prop_dispersalcosts,prop_seedcosts)
+prop_seedcosts_spp$species <- labels.spp.full()
+prop_seedcosts_spp <- format(prop_seedcosts_spp, digit=2)
+write.csv(prop_seedcosts_spp, file="figs2/Accessory_Costs/Table04_Prop_seedcosts_by_Species.csv",row.names=FALSE)
 ```
 
-#Figure 2 and Table 3. Scaling of accessory costs versus seed size, by species
+#Figure 4. Scaling of accessory costs versus seed size, by species
 ```{r}
-win.metafile("figs2/Accessory_Costs/Figure02_seed_size_correlations.wmf", height=5, width=15)
+win.metafile("figs2/Accessory_Costs/Figure04_seed_size_acc_cost_correlations.wmf", height=5, width=15)
 plot
 
 par(mfrow=c(1,3), cex=1, omi=c(.6,.1,.05,.05), mai=c(.1,.8,.05,.05)) 
@@ -227,7 +205,7 @@ axis(2, at=c(0.1,10,1000), labels=c(0.1,10,1000),cex.axis=1)
 axis(1, at=c(0.1,10,1000), labels=c(0.1,10,1000),cex.axis=1)
 
 plot(prepollencosts~seed_size,SummarySpp[["mean"]],col=col.spp(species),pch=16,log="xy", yaxt="n",xaxt="n", ylim=c(.02,20000), xlim=c(.02,20000), ylab="required pre-pollination costs per seed (mg/seed)",xlab="",cex=1.5)
-y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$prepollencosts,SummarySpp[["se"]]$prepollencosts)
+#y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$prepollencosts,SummarySpp[["se"]]$prepollencosts)
 mod <- lm(log10(prepollencosts)~log10(seed_size),SummarySpp[["mean"]])
 abline(coef(mod)[1],coef(mod)[2])
 abline(coef(mod)[1],1,col="red")
@@ -235,7 +213,7 @@ axis(2, at=c(0.1,10,1000), labels=c(0.1,10,1000),cex.axis=1)
 axis(1, at=c(0.1,10,1000), labels=c(0.1,10,1000),cex.axis=1)
 
 plot(packaging_dispersal_per_seed~seed_size,SummarySpp[["mean"]],col=col.spp(species),pch=16,log="xy", yaxt="n",xaxt="n", ylim=c(.02,20000), xlim=c(.02,20000), ylab="packaging and dispersal costs per seed (mg/seed)",xlab="",cex=1.5)
-y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$packaging_dispersal_per_seed,SummarySpp[["se"]]$prepollencosts)
+#y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$packaging_dispersal_per_seed,SummarySpp[["se"]]$prepollencosts)
 mod <- lm(log10(packaging_dispersal_per_seed)~log10(seed_size),SummarySpp[["mean"]])
 abline(coef(mod)[1],coef(mod)[2])
 abline(coef(mod)[1],1,col="red")
@@ -245,6 +223,7 @@ mtext(text="seed size (mg)",side=1,line=1.5,outer=TRUE)
 dev.off()
 ```
 
+#Table 5. Slopes for various seed size by acc cost regressions
 ```{r}
 par(mfrow=c(2,3), cex=1, omi=c(.6,.1,.05,.05), mai=c(.1,.8,.05,.05)) 
 options(scipen = 5)
@@ -299,13 +278,214 @@ mtext(text="seed size (mg)",side=1,line=1.5,outer=TRUE)
 
 acc_by_species$variable = c("total accessory costs","prepollen_success","prepollen_failure","c div p","dispersal")
 
-write.csv(acc_by_species, file="figs2/Accessory_Costs/Table03_acc_by_species.csv",row.names=FALSE)
+write.csv(acc_by_species, file="figs2/Accessory_Costs/Table05_acc_cost_seed_size_slopes.csv",row.names=FALSE)
 ```
 
-#Table 4 and Figure 3.Per seed accessory costs are lower in individuals with higher seed count. 
-###This effect is true across species, since larger-seeded species produce fewer seeds and have higher per seed accessory costs and true within species, since absolute accessory investment is a function of plant size not seedset
+#Figure 5 seed count, scaled to plant size, decreases 1:1 with seed size, while bud count decreases less steeply; indication that seed count is what is actually "programmed in"
 ```{r}
-win.metafile("figs2/Accessory_Costs/Figure_EXTRA_acc_cost_by_seed_count.wmf", height=5, width=5)
+
+win.metafile("figs2/Accessory_Costs/Figure05_cost_of_flowers_vs_seed_size.wmf", height=5, width=15)
+plot
+
+par(mfrow=c(1,3), cex=1, omi=c(.1,.1,.1,.05), mai=c(1,1,.1,.05))
+options(scipen = 4)
+
+plot(seedset~seed_size,SummarySpp[["mean"]],log="xy",col=col.spp(species),pch=16, xlim=c(.01,1000),ylim=c(.01,.3),cex=1.5,xaxt="n",xlab="seed size (mg)",ylab="seed set")
+mod <- lm(log10(seedset)~log10(seed_size),SummarySpp[["mean"]])
+abline(mod$coeff[1],mod$coeff[2])
+text(10^((0.99*(par("usr")[2]-par("usr")[1]))+par("usr")[1]),10^((0.98*(par("usr")[4]-par("usr")[3]))+par("usr")[3]),
+     paste("r2 = ",round(glance(mod)[1],2)),adj=1)
+y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$seedset,SummarySpp[["se"]]$seedset)
+axis(1, at=c(0.01,1,100), labels=c(0.01,1,100),cex.axis=0.9)
+legend("bottomleft",legend=labels.spp(),col=col.spp(),pch=16, cex=.9,bty="n")
+
+#put together, big-seeded plants produce lots more buds than predicted from 1:1 relationship, but the "correct" number of seeds
+plot(scaled_seed_count~seed_size,SummaryInd,pch=16,log="xy",col=col.spp(species),xlim=c(.01,1000),ylim=c(1e-6,10),yaxt="n",xaxt="n",xlab="seed size (mg)",ylab="count, scaled to plant size")
+points(scaled_bud_count~seed_size,SummaryInd,pch=21,col=col.spp(species))
+#points(scaled_failure_count~seed_size,SummaryInd,pch=2,col=col.spp(species))
+axis(2, at=c(0.000001,0.0001,0.01,1), labels=c(0.000001,0.0001,0.01,1),cex.axis=0.9)
+axis(1, at=c(0.01,1,100), labels=c(0.01,1,100),cex.axis=0.9)
+
+summary(mod2)
+mod1 <- sma(scaled_seed_count~seed_size,data=subset(SummaryInd,scaled_seed_count!=0),log="xy",slope=-1,method="OLS")
+mod2 <- sma(scaled_bud_count~seed_size,data=subset(SummaryInd,scaled_bud_count!=0),log="xy",slope=-1,method="OLS")
+mod3 <- sma(scaled_failure_count~seed_size,data=subset(SummaryInd,scaled_failure_count!=0),log="xy",slope=-1,method="OLS")
+sma_abline(mod1)
+abline(mod2$coef[[1]][1,1],mod2$coef[[1]][2,1],col="blue")
+abline(mod3$coef[[1]][1,1],mod3$coef[[1]][2,1],col="red")
+legend("topright",legend=c("seed count","total bud count","failed flower count"),col=c("black","blue","red"),pch=c(16,21,8),bty="n")
+
+#species that abort a disprortionate # of buds can do so because the relative cost of buds (relative to seeds, dispersal) is small
+plot(prop_prepollencosts~seedset,SummarySpp[["mean"]],pch=16,log="x",col=col.spp(species),ylim=c(-.2,1),xlim=c(.01,.3),cex=1.5,yaxt="n",ylab="pre-pollination costs (proportion of total seed costs)",xlab="seed set")
+mod <- sma(prop_prepollencosts~seedset,data=subset(SummarySpp[["mean"]]),log="x",slope=1,method="OLS")
+y.error.bars(SummarySpp[["mean"]]$seedset,SummarySpp[["mean"]]$prop_prepollencosts,SummarySpp[["se"]]$prop_prepollencosts)
+sma_abline(mod)
+sma_sum(mod)
+text(10^((0.99*(par("usr")[2]-par("usr")[1]))+par("usr")[1]),((0.98*(par("usr")[4]-par("usr")[3]))+par("usr")[3]),
+     paste("r2 = ",round(sma_sum(mod)[1],2)),adj=1)
+axis(2, at=c(-0.2,0,.2,.4,.6,.8,1), labels=c("",0.0,0.2,0.4,0.6,0.8,""),cex.axis=1)
+
+dev.off()
+```
+
+#Table 6. Higher RE, RA, plant size do not lead to lower accessory costs; age shows mixed results
+```{r}
+win.metafile("figs2/Accessory_Costs/FigureXX_RE_RA_size_age_patterns.wmf", height=10, width=10)
+plot
+
+par(mfrow=c(2,2), cex=1, omi=c(.1,.4,.1,.05), mai=c(.6,.3,.1,.1))
+options(scipen = 2)
+
+xvar <- "repro_inv"
+yvar <- "accessory_per_seed"
+data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
+
+fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
+results <- lines(fit$groupsummary)
+plot(fit,col=col.spp(fit$groupsummary$group),pch=16,xlab="",ylab=yvar,lty=results$linetype)
+mtext(text="reproductive investment (mg) (RE)",side=1,line=2,outer=FALSE)
+legend_with_r2(results,"bottomright")
+
+write.csv(results, file="figs2/Accessory_Costs/Table06a_accessory_vs_RE.csv",row.names=FALSE)
+ 
+xvar <- "total_weight_0"
+yvar <- "accessory_per_seed"
+data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
+
+fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
+results <- lines(fit$groupsummary)
+plot(fit,col=col.spp(fit$groupsummary$group),pch=16,xlab="",ylab=yvar,lty=results$linetype)
+mtext(text="total plant size (mg)",side=1,line=2,outer=FALSE)
+legend_with_r2(results,"bottomright")
+
+write.csv(results, file="figs2/Accessory_Costs/Table06b_accessory_vs_total_weight.csv",row.names=FALSE)
+
+xvar <- "age"
+yvar <- "accessory_per_seed"
+data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
+
+fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
+results <- lines(fit$groupsummary)
+plot(fit,col=col.spp(fit$groupsummary$group),pch=16,xlab="",ylab="",lty=results$linetype)
+mtext(text="age (years)",side=1,line=2,outer=FALSE)
+mtext(text="per seed accessory costs (mg/seed)",side=2,line=1,outer=TRUE)
+legend_with_r2(results,"topleft")
+
+write.csv(results, file="figs2/Accessory_Costs/Table06c_accessory_vs_age.csv",row.names=FALSE)
+dev.off()
+```
+
+###GOOD VISUALS - not currently in manuscript
+```{r}
+win.metafile("figs2/Accessory_Costs/FigureXX_seedcount_reprocount.wmf", height=5, width=5)
+plot
+
+par(mfrow=c(1,1), cex=1, omi=c(.1,.1,.1,0.05), mai=c(.8,.8,.1,0.1))
+options(scipen = 2)
+
+xvar <- "prepollen_all_count"
+yvar <- "seed_count"
+data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
+
+fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
+results <- lines(fit$groupsummary)
+plot(fit,col=col.spp(fit$groupsummary$group),pch=16,xlab="buds initiated (count)",ylab="seed count",lty=results$linetype,xlim=c(0.9,20000),ylim=c(0.9,20000))
+
+abline(0,1,lwd=2)
+abline(-2,1,lwd=2)
+
+legend_with_r2(results,"topleft")
+
+dev.off()
+```
+
+```{r}
+win.metafile("figs2/Accessory_Costs/FigureXX_success_vs_failure.wmf", height=6, width=8)
+plot
+
+par(mfrow=c(1,2), cex=1, omi=c(.8,.1,.1,.1), mai=c(.1,.8,.1,.1)) 
+
+xvar <- "repro_inv"
+yvar <- "prop_propagule"
+
+data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
+
+fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
+results <- lines(fit$groupsummary)
+plot(fit,col=col.spp(fit$groupsummary$group),pch=16,lty=results$linetype,ylim=c(.001,1),xlab="",ylab="prop repro energy to propagules")
+abline(-0.30103,0,lwd=2)
+abline(-1,0,lwd=2)
+
+xvar <- "repro_inv"
+yvar <- "prop_success"
+
+data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
+
+fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
+results <- lines(fit$groupsummary)
+plot(fit,col=col.spp(fit$groupsummary$group),pch=16,lty=results$linetype,ylim=c(.001,1),xlab="",ylab="prop repro energy to success")
+abline(-0.30103,0,lwd=2)
+abline(-1,0,lwd=2)
+mtext(text="reproductive investment (mg)",side=1,line=2,outer=TRUE)
+
+dev.off()
+```
+
+#EXTRAS - not in manuscript
+#Neither within nor across species, does the proportion of reproductive energy spent on "success" correlate with total reproductive investment
+```{r}
+par(mfrow=c(1,1), cex=1, omi=c(.1,.1,.1,.05), mai=c(.8,.8,.1,.05))
+
+xvar <- "repro_inv"
+yvar <- "prop_success"
+data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
+
+fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], log="x",method="OLS")
+results <- lines(fit$groupsummary)
+plot(fit,col=col.spp(fit$groupsummary$group),xlab="",ylab="",lty=results$linetype,pch=16,log="x")
+```
+
+#correlations between repro inv and propagule inv by species
+```{r}
+yvar <- "repro_inv"
+xvar <- "propagule_inv"
+data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
+
+fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
+results <- fit$groupsummary
+
+write.csv(results, file="figs2/Accessory_Costs/Table02_extra_propagule_invest_vs_repro_inv.csv",row.names=FALSE)
+```
+
+#when reproductive investment is scaled by leaf area there is no significant difference by seed size - so increase in repro inv with seed size simply because species with bigger seeds are bigger plants  
+```{r}
+plot(scaled_repro_inv~seed_size,SummaryInd, col=col.spp(species),pch=16,log="xy")
+points(scaled_repro_inv~seed_size,SummarySpp[["mean"]], cex=2, col=col.spp(species),pch=16)
+mod <-sma(scaled_repro_inv~seed_size,SummarySpp[["mean"]],log="xy",method="OLS")
+summary(mod)
+```
+
+#Consider how accessory cost components shift in terms of costs per seed, and cost as fraction total reproductive investment
+```{r}
+par(mfrow=c(1,1), cex=1, omi=c(.1,.1,.1,.05), mai=c(.8,.8,.1,.1))
+
+plot(repro_inv~seed_size,SummarySpp[["mean"]],log="xy",col=col.spp(species),pch=16)
+mod <- lm(log10(repro_inv)~log10(seed_size),SummarySpp[["mean"]])
+abline(mod$coeff[1],mod$coeff[2])
+words.top.left.logxy(mod)
+y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$repro_inv,SummarySpp[["se"]]$repro_inv)
+
+par(mfrow=c(1,1), cex=1, omi=c(.1,.1,.1,.05), mai=c(.8,.8,.1,.1))
+plot(seedset~seed_size,SummarySpp[["mean"]],log="xy",col=col.spp(species),pch=16)
+mod <- lm(log10(seedset)~log10(seed_size),SummarySpp[["mean"]])
+abline(mod$coeff[1],mod$coeff[2])
+words.bottom.left.logxy(mod)
+y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$seedset,SummarySpp[["se"]]$seedset)
+```
+
+#This effect is true across species, since larger-seeded species produce fewer seeds and have higher per seed accessory costs and true within species, since absolute accessory investment is a function of plant size not seedset
+```{r}
+win.metafile("figs2/Accessory_Costs/FigureXX_EXTRA_acc_cost_by_seed_count.wmf", height=5, width=5)
 plot
 
 par(mfrow=c(1,1), cex=1, omi=c(1,1,.1,.1), mai=c(1,1,.5,.5)) 
@@ -324,15 +504,14 @@ mod <- lm(log10(accessory_per_seed)~log10(seed_count),data=subset(SummarySpp[["m
 words.top.right.logxy(mod)
 legend_with_r2(results,"bottomleft")
 
-results
-write.csv(results, file="figs2/Accessory_Costs/Table04a_seedcount_vs_accessory.csv",row.names=FALSE)
+write.csv(results, file="figs2/Accessory_Costs/TableXX_seedcount_vs_accessory.csv",row.names=FALSE)
 
 dev.off()
 ```
 
-#Table 4 extra - showing propagule investment instead of seed_count. Could also replace with seedset
+#propagule investment instead of seed_count. Could also replace with seedset
 ```{r}
-win.metafile("figs2/Accessory_Costs/Figure_acc_cost_by_seedset.wmf", height=9, width=9)
+win.metafile("figs2/Accessory_Costs/FigureXX_acc_cost_by_seedset.wmf", height=9, width=9)
 plot
 
 par(mfrow=c(2,2), cex=1, omi=c(.5,.1,.1,.1), mai=c(.1,1,.3,.1)) 
@@ -346,7 +525,7 @@ results <- lines(fit$groupsummary)
 plot(fit,col=col.spp(fit$groupsummary$group),pch=16,xlab="",ylab="total accessory costs (mg/seed)",lty=results$linetype,xlim=c(.0005,.5),ylim=c(.01,200000),xaxt="n")
 legend_with_r2(results,"bottomleft")
 
-write.csv(results, file="figs2/Accessory_Costs/Table04b_seedset_vs_accessory.csv",row.names=FALSE)
+write.csv(results, file="figs2/Accessory_Costs/TableXX_seedset_vs_accessory.csv",row.names=FALSE)
 
 xvar <- "seedset"
 yvar <- "prepollen_all_per_seed"
@@ -357,7 +536,7 @@ results <- lines(fit$groupsummary)
 plot(fit,col=col.spp(results$group),pch=16,xlab="",ylab="pre-pollination costs (mg/seed)",lty=results$linetype,xlim=c(.0005,.5),ylim=c(.01,200000),xaxt="n")
 legend_with_r2(results,"bottomleft")
 
-write.csv(results, file="figs2/Accessory_Costs/Table06a_prepollen_all_per_seed_vs_seedset.csv",row.names=FALSE)
+write.csv(results, file="figs2/Accessory_Costs/TableXX_prepollen_all_per_seed_vs_seedset.csv",row.names=FALSE)
 
 xvar <- "seedset"
 yvar <- "postpollen_aborted_per_seed"
@@ -369,7 +548,7 @@ plot(fit,col=col.spp(results$group),pch=16,xlab="",ylab="aborted post pollinatio
 legend_with_r2(results,"bottomleft")
 
 
-write.csv(results, file="figs2/Accessory_Costs/Table06b_postpollen_aborted_per_seed_vs_seedset.csv",row.names=FALSE)
+write.csv(results, file="figs2/Accessory_Costs/TableXX_postpollen_aborted_per_seed_vs_seedset.csv",row.names=FALSE)
 
 xvar <- "seedset"
 yvar <- "packaging_dispersal_per_seed"
@@ -403,7 +582,7 @@ results <- merge(results, max_seedset, by=c("species"), all=TRUE)
 results <- merge(results, min_seedset, by=c("species"), all=TRUE)
 names(results)=c("species","r2","slope","ovules_per_fruit","max_seedset","min_seedset")
 
-win.metafile("figs2/Accessory_Costs/Table07_dispcosts_vs_ovules.wmf", height=6, width=6)
+win.metafile("figs2/Accessory_Costs/FigureXX_dispcosts_vs_ovules.wmf", height=6, width=6)
 plot
 
 par(mfrow=c(1,1), cex=1, omi=c(.4,.4,.1,.1), mai=c(.8,.8,.2,.2)) 
@@ -413,82 +592,13 @@ abline(mod$coeff[1],mod$coeff[2])
 words.top.left.logy(mod)
 dev.off()
 
-write.csv(results, file="figs2/Accessory_Costs/Table06c_dispersal_vs_seedset.csv",row.names=FALSE)
+write.csv(results, file="figs2/Accessory_Costs/TableXX_dispersal_vs_seedset.csv",row.names=FALSE)
 ```
 
-#Higher RE, RA, plant size do not lead to lower accessory costs; age shows mixed results
-##Not a single species shows a reduction in per seed accessory costs with increased plant size.Indeed, EPMI has higher pre-pollination accessory costs    (slope = 0.38, r2=0.19, p=0.019) and accessory costs due to aborted fruit and seeds (slope = 0.83, r2=0.268, p=0.019) in larger individuals, as larger individuals of this species have lower seedset (slope = -0.31, r2=0.198, p=0.018). GRSP also has a nearly significant decline in seedset in larger individuals (slope = -0.78, r2=0.298, p=0.067).
-```{r}
-win.metafile("figs2/Accessory_Costs/Figure_RE_RA_size_age_patterns.wmf", height=10, width=10)
-plot
-
-par(mfrow=c(2,2), cex=1, omi=c(.1,.4,.1,.05), mai=c(.6,.3,.1,.1))
-options(scipen = 2)
-
-xvar <- "repro_inv"
-yvar <- "accessory_per_seed"
-data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
-
-fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
-results <- lines(fit$groupsummary)
-plot(fit,col=col.spp(fit$groupsummary$group),pch=16,xlab="",ylab=yvar,lty=results$linetype)
-mtext(text="reproductive investment (mg) (RE)",side=1,line=2,outer=FALSE)
-legend_with_r2(results,"bottomright")
-
-write.csv(results, file="figs2/Accessory_Costs/Table05a_accessory_vs_RE.csv",row.names=FALSE)
- 
-xvar <- "total_weight_0"
-yvar <- "accessory_per_seed"
-data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
-
-fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
-results <- lines(fit$groupsummary)
-plot(fit,col=col.spp(fit$groupsummary$group),pch=16,xlab="",ylab=yvar,lty=results$linetype)
-mtext(text="total plant size (mg)",side=1,line=2,outer=FALSE)
-legend_with_r2(results,"bottomright")
-
-write.csv(results, file="figs2/Accessory_Costs/Table05c_accessory_vs_total_weight.csv",row.names=FALSE)
-
-xvar <- "age"
-yvar <- "accessory_per_seed"
-data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
-
-fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
-results <- lines(fit$groupsummary)
-plot(fit,col=col.spp(fit$groupsummary$group),pch=16,xlab="",ylab="",lty=results$linetype)
-mtext(text="age (years)",side=1,line=2,outer=FALSE)
-mtext(text="per seed accessory costs (mg/seed)",side=2,line=1,outer=TRUE)
-legend_with_r2(results,"topleft")
-
-write.csv(results, file="figs2/Accessory_Costs/Table05d_accessory_vs_age.csv",row.names=FALSE)
-dev.off()
-```
-
-```{r}
-win.metafile("figs2/Accessory_Costs/Figure_seedcount_reprocount.wmf", height=5, width=5)
-plot
-
-par(mfrow=c(1,1), cex=1, omi=c(.1,.1,.1,0.05), mai=c(.8,.8,.1,0.1))
-options(scipen = 2)
-
-xvar <- "prepollen_all_count"
-yvar <- "seed_count"
-data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
-
-fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
-results <- lines(fit$groupsummary)
-plot(fit,col=col.spp(fit$groupsummary$group),pch=16,xlab="buds initiated (count)",ylab="seed count",lty=results$linetype,xlim=c(0.9,20000),ylim=c(0.9,20000))
-
-abline(0,1,lwd=2)
-abline(-2,1,lwd=2)
-
-legend_with_r2(results,"topleft")
-
-dev.off()
-```
 #Considering the individual components of accessory costs vs. seedset - since seedset best predictor of accessory costs
 
 #For each species the accessory cost components that cause shifts in total accessory costs is different and reflects both which components are largest and whichvary most with some factor - seedset, age, etc.
+#CODE CURRENTLY DOESN"T WORK
 ```{r}
 xvar1 <- "packaging_dispersal_per_seed"
 xvar2 <- "prepollencosts"
@@ -529,7 +639,7 @@ species_coef <- dplyr::left_join(species_coef,LEES_c,by="effect")
 # Reorder by column name
 species_coef <- species_coef[c("effect", "BAER", "BOLE", "COER", "EPMI", "GRBU", "GRSP", "HATE", "HEPU", "LEES", "PELA", "PEPU", "PHPH", "PILI", "PUTU")]
 
-write.csv(species_coef, file="figs2/Accessory_Costs/Table08_accessory_components_coeff.csv",row.names=FALSE)
+write.csv(species_coef, file="figs2/Accessory_Costs/TableXX_accessory_components_coeff.csv",row.names=FALSE)
 
 species_t <- as.data.frame(c("intercept","packaging&dispersal","prepollencosts","postpollen_aborted_per_seed","pre-pollen failure per seed"))
 
@@ -557,7 +667,7 @@ species_t <- dplyr::left_join(species_t,LEES_t,by="effect")
 # Reorder by column name
 species_t <- species_t[c("effect", "BAER", "BOLE", "COER", "EPMI", "GRBU", "GRSP", "HATE", "HEPU", "LEES", "PELA", "PEPU", "PHPH", "PILI", "PUTU")]
 
-write.csv(species_t, file="figs2/Accessory_Costs/Table08_accessory_components_t-value.csv",row.names=FALSE) 
+write.csv(species_t, file="figs2/Accessory_Costs/TableXX_accessory_components_t-value.csv",row.names=FALSE) 
 
 ```
 
@@ -582,7 +692,7 @@ plot(data[[yvar]] ~ data[[xvar]],log="x",col=col.spp(data$species),pch=16,xlim=c
 points(data2[[yvar]] ~ data2[[xvar]],col=col.spp(data2$species),pch=16,cex=2)
 }
 
-write.csv(results, file="figs2/Accessory_Costs/Table_prop_tissues_inv_by_seed_size.csv",row.names=FALSE) 
+write.csv(results, file="figs2/Accessory_Costs/TableXX_prop_tissues_inv_by_seed_size.csv",row.names=FALSE) 
 ```
 
 #looking at how the slopes of the relationship between accessory investment and propagule investment shift across species 
@@ -611,102 +721,4 @@ data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
 fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
 results <- lines(fit$groupsummary)
 plot(fit,col=col.spp(fit$groupsummary$group),pch=16,xlab=xvar,ylab=yvar,lty=results$linetype)
-```
-
-```{r}
-win.metafile("figs2/Accessory_Costs/Figure_success_vs_failure.wmf", height=6, width=8)
-plot
-
-par(mfrow=c(1,2), cex=1, omi=c(.8,.1,.1,.1), mai=c(.1,.8,.1,.1)) 
-
-xvar <- "repro_inv"
-yvar <- "prop_propagule"
-
-data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
-
-fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
-results <- lines(fit$groupsummary)
-plot(fit,col=col.spp(fit$groupsummary$group),pch=16,lty=results$linetype,ylim=c(.001,1),xlab="",ylab="prop repro energy to propagules")
-abline(-0.30103,0,lwd=2)
-abline(-1,0,lwd=2)
-
-xvar <- "repro_inv"
-yvar <- "prop_success"
-
-data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
-
-fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
-results <- lines(fit$groupsummary)
-plot(fit,col=col.spp(fit$groupsummary$group),pch=16,lty=results$linetype,ylim=c(.001,1),xlab="",ylab="prop repro energy to success")
-abline(-0.30103,0,lwd=2)
-abline(-1,0,lwd=2)
-mtext(text="reproductive investment (mg)",side=1,line=2,outer=TRUE)
-
-dev.off()
-```
-
-```{r}
-ternary <- select(SummarySpp[["mean"]],species,seed_size,prepollencosts,packaging_dispersal_per_seed)
-ternary$packaging_dispersal_per_seed[9] <- 0.1
-
-ternary$seedcosts = ternary$seed_size + ternary$prepollencosts + ternary$packaging_dispersal_per_seed
-ternary$per_seed <-100*ternary$seed_size/ternary$seedcosts
-ternary$per_poll <-100*ternary$prepollencosts/ternary$seedcosts
-
-ternary$per_disp <-100*ternary$packaging_dispersal_per_seed/ternary$seedcosts
-mod_poll <- sma(per_poll~seedcosts,ternary,slope.test=0,method="OLS",log="x")
-mod_seed <- sma(per_seed~seedcosts,ternary,slope.test=0,method="OLS",log="x")
-mod_disp <- sma(per_disp~seedcosts,ternary,slope.test=0,method="OLS",log="x")
-
-costs_per_seed <- as.data.frame("costs for seed (%)")
-costs_per_seed <- cbind(costs_per_seed,select(mod_seed$groupsummary,r2,pval,Int,Slope,Slope_lowCI,Slope_highCI,Slope_test,Slope_test_p))
-names(costs_per_seed) <- c("investment category (mg)","r squared","p value","intercept","slope","slope_lowCI","slope_highCI","slope test","slope test p")
-
-costs_per_seed2 <- as.data.frame("costs for pre-pollination (%)")
-costs_per_seed2 <- cbind(costs_per_seed2,select(mod_poll$groupsummary,r2,pval,Int,Slope,Slope_lowCI,Slope_highCI,Slope_test,Slope_test_p))
-names(costs_per_seed2) <- c("investment category (mg)","r squared","p value","intercept","slope","slope_lowCI","slope_highCI","slope test","slope test p")
-costs_per_seed <- rbind(costs_per_seed,costs_per_seed2)
-
-costs_per_seed2 <- as.data.frame("costs for dispersal (%)")
-costs_per_seed2 <- cbind(costs_per_seed2,select(mod_disp$groupsummary,r2,pval,Int,Slope,Slope_lowCI,Slope_highCI,Slope_test,Slope_test_p))
-names(costs_per_seed2) <- c("investment category (mg)","r squared","p value","intercept","slope","slope_lowCI","slope_highCI","slope test","slope test p")
-costs_per_seed <- rbind(costs_per_seed,costs_per_seed2)
-
-write.csv(costs_per_seed, file="figs2/Accessory_Costs/Table08_costs_per_seed.csv",row.names=FALSE)
-
-win.metafile("figs2/Accessory_Costs/seedcost_components.wmf", height=6, width=6)
-plot
-
-plot(per_seed~seedcosts,ternary,col="black",log="x",pch=21,cex=2,ylim=c(0,75),ylab="prop of seedcosts")
-points(per_poll~seedcosts,ternary,col="red",pch=16,cex=2)
-points(per_disp~seedcosts,ternary,col="blue",pch=16,cex=2)
-
-abline(mod_poll$groupsummary["Int"][[1]],mod_poll$groupsummary["Slope"][[1]],col="red",lwd=2)
-abline(mod_seed$groupsummary["Int"][[1]],mod_seed$groupsummary["Slope"][[1]],col="black",lty=2,lwd=2)
-abline(mod_disp$groupsummary["Int"][[1]],mod_disp$groupsummary["Slope"][[1]],col="blue",lwd=2)
-legend("topleft",legend=c("seed","prepollen","pack&disp"),col=c("black","red","blue"),pch=16, cex=1.1,bty="n")
-dev.off()
-```
-
-```{r}
-win.metafile("figs2/Accessory_Costs/Ternary.wmf", height=5, width=5)
-plot
-
-par(mfrow=c(1,1), cex=1, omi=c(1,1,1,1), mai=c(.1,.1,.1,.1)) 
-
-ggtern(data=ternary,aes(y=per_seed,x=per_poll,z=per_disp)) +
-  labs(y = "seed",
-       x = "pre-poll",
-       z = "pack&disp",
-       Tarrow = "seed weight (%)",
-       Larrow = "pre-pollination costs (%)",
-       Rarrow = "packaging & dispersal costs (%)",
-       title = "Seed cost components",
-       size = 3) +
-  geom_point(size=sqrt(ternary$seedcosts/2),shape=20,color=col.spp()) +
-   theme_bw() + 
-  theme_showarrows() +
-  geom_text(label=ternary$species, color="black", hjust=-.3, vjust=sqrt(ternary$seedcosts/500),size=2)
-
-dev.off()
 ```
